Fix z-index of lightbox component

--- a/src/components/Lightbox/Lightbox.css
+++ b/src/components/Lightbox/Lightbox.css
@@ -4,7 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgb(0, 0, 0, .3);
+    z-index: 20;
+    background: rgb(0, 0, 0, .7);
 }
 
 .Lightbox .Content {
@@ -12,6 +13,7 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    z-index: 1000;
     flex-direction: column;
 }
 
